// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the Card snapshot 1`] = `
<DocumentFragment>
  <div
    class="Card"
  >
    <h4
      class="Card-title"
    />
    <img
      class="Card-image"
    />
    <small
      class="Card-small"
    >
      Image  of .
    </small>
  </div>
</DocumentFragment>
`;

exports[`matches the Carousel snapshot 1`] = `
<DocumentFragment>
  <div
    class="Carousel"
  >
    <h1>
      Shells from far away beaches.
    </h1>
    <div
      class="Carousel-main"
    >
      <i
        class="fas fa-chevron-circle-left fa-2x"
        data-testid="left-arrow"
        id="left-arrow"
      />
      <div
        class="Card"
      >
        <h4
          class="Card-title"
        >
          Photo by Richard Pasquarella on Unsplash
        </h4>
        <img
          alt="Photo by Richard Pasquarella on Unsplash"
          class="Card-image"
          src="image1.jpg"
        />
        <small
          class="Card-small"
        >
          Image 1 of 3.
        </small>
      </div>
      <i
        class="fas fa-chevron-circle-right fa-2x"
        data-testid="right-arrow"
        id="right-arrow"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <div
      class="Carousel"
    >
      <h1>
        Shells from far away beaches.
      </h1>
      <div
        class="Carousel-main"
      >
        <i
          class="fas fa-chevron-circle-left fa-2x"
          data-testid="left-arrow"
          id="left-arrow"
        />
        <div
          class="Card"
        >
          <h4
            class="Card-title"
          >
            Photo by Richard Pasquarella on Unsplash
          </h4>
          <img
            alt="Photo by Richard Pasquarella on Unsplash"
            class="Card-image"
            src="image1.jpg"
          />
          <small
            class="Card-small"
          >
            Image 1 of 3.
          </small>
        </div>
        <i
          class="fas fa-chevron-circle-right fa-2x"
          data-testid="right-arrow"
          id="right-arrow"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
